# docs/swagger.json
@@ -144,6 +144,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过comic_id更新漫画内容",
                 "consumes": [
                     "application/json"
@@ -189,6 +194,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "新建一个新漫画",
                 "consumes": [
                     "application/json"
@@ -234,6 +244,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过comic_id删除漫画",
                 "produces": [
                     "application/json"
@@ -324,6 +339,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过group_id修改章节组",
                 "consumes": [
                     "application/json"
@@ -388,6 +408,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "添加一个新的章节组",
                 "consumes": [
                     "application/json"
@@ -452,6 +477,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过group_id删除章节组",
                 "produces": [
                     "application/json"
@@ -559,6 +589,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过chapter_id修改漫画章节",
                 "consumes": [
                     "application/json"
@@ -630,6 +665,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过chapter_id添加漫画章节",
                 "consumes": [
                     "application/json"
@@ -701,6 +741,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "通过chapter_id删除漫画章节",
                 "produces": [
                     "application/json"
@@ -756,6 +801,11 @@
         },
         "/server/add": {
             "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "添加一个分布式服务器",
                 "consumes": [
                     "application/json"
@@ -802,6 +852,11 @@
         },
         "/server/delete": {
             "delete": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "删除一个分布式服务器",
                 "produces": [
                     "application/json"
@@ -881,6 +936,11 @@
         },
         "/upload/image": {
             "post": {
+                "security": [
+                    {
+                        "token": []
+                    }
+                ],
                 "description": "上传图片并通过ipfs客户端上传至网络，返回cid",
                 "consumes": [
                     "multipart/form-data"
@@ -1411,6 +1471,9 @@
                     "type": "string"
                 },
                 "nickname": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 },
                 "rights": {
